css/style.css
/* ... */
  .testimonial-active .slick-dots li::after {
	position: absolute;
	content: "";
	background: white;
	top: 5px;
	left: 0;
	width: 40px;
	height: 2px;
  }
  .testimonial-active .slick-dots li:last-child::after {
	display: none;
  }
  .testimonial-active .slick-dots li button {
	border: 2px solid white;
	width: 10px;
	height: 10px;
	padding: 0;
	border-radius: 50%;
	background: white;
	text-indent: -9999px;
	position: relative;
  }
  .testimonial-active .slick-dots li button::after {
	position: absolute;
	content: "";
	background: rgba(255, 255, 255, 0.3);
	top: -5px;
	left: -5px;
	width: 16px;
	height: 16px;
	border-radius: 50%;
	z-index: 999;
  }
  .testimonial-active .slick-dots li.slick-active button {
	background: white;
  }
  .testimonial-active .slick-dots li.slick-active button::after {
	position: absolute;
	content: "";
	background: rgba(1, 193, 206, 0.5);
	top: -5px;
	left: -5px;
	width: 16px;
	height: 16px;
	border-radius: 50%;
	z-index: 999;
  }
  .testimonial-active.center-testimonial .single-testimonial .client-say p {
	font-size: 16px;
	line-height: 30px;
	display: table-cell;
	vertical-align: middle;
	text-align: center;

  }
  .testimonial-active.center-testimonial .single-testimonial .client-say {
	color: white;
	transition: color 0.3s;
	transition: background-color 0.3s;
	background: rgba(0, 0, 0, 0.1);
	/* background: rgba(0, 0, 0, 0.1) linear-gradient(to bottom, rgba(221, 221, 221, 0.6) 0%, #F6F6F6 100%) repeat scroll 0 0; */
  }
  .testimonial-active.center-testimonial .single-testimonial .client-say::after {
	border-top: 50px solid #F6F6F6;
  }
  .testimonial-active.center-testimonial .single-testimonial .client-author h4 {
	color: #333;
  }
  .testimonial-active.center-testimonial .single-testimonial .client-author p {
	color: white;

  }
  .testimonial-active.center-testimonial .slick-slide.slick-center .testimonial-content .client-say {
	color: black;
	transition: color 0.3s;
	/* background: rgba(0, 0, 0, 0.1) linear-gradient(to bottom, rgba(7, 82, 150, 0.8) 0%, #09C7E0 100%) repeat scroll 0 0; */
	transition: background-color 0.3s;
	background: white;
  }
  .testimonial-active.center-testimonial .slick-slide.slick-center .testimonial-content .client-say::after {
	border-top: 50px solid #09c7e0;
  }

  #ourcustomers {
	  padding-top: 40px;
	  padding-bottom: 40px;
  }
  
  #ourcustomers .slick-prev:before, #ourcustomers .slick-next:before {
	  color: black;
  }
  #ourcustomers .testimonial-active,
  #ourcustomers .testimonial-active .slick-list {
	  min-height: 150px;
	  }

	  /* .navbar
	  {
		  height: 90px;
	  } */
.navbar-collapse ul {
font: 14px 'Open Sans', sans-serif;
text-transform: uppercase;
font-weight: 600;
}
.navbar-collapse a {
	/*  -webkit-tap-highlight-color: rgba(0,0,0,0);
	  border-top: 1px solid white;
	  text-decoration: none;
	  background: #f4421a;
	  padding: 0.7em 1em;*/
	  color: #fff;
	  width: 100%;
	  float: left;
	}
	
	.navbar-collapse a:active,
	.navbar-collapse .active a {
	/*  background: #b73214;*/
	  color: #1da4dd;
	}
	
	.navbar-collapse a i {
		font-size: 5px;
		float: left;
		margin-top: 7px;
		margin-right: 5px;
	}
	
	/* @media screen and (min-width: 50em) {
	  .navbar-collapse a {
		padding: 1.8em 1.4em;
		text-align: center;
		border-top: 0;
		float: left;
		margin: 0;
	  }
	} */
	
	.navbar-collapse ul ul a {
	  background: #ca3716;
	  padding-left: 2em;
	}
	
	/* @media screen and (min-width: 50em) {
	  .navbar-collapse ul ul a {
		display: none;
	  }
	} */
navbar.navbar-dark {
	background: #272727;
}

